# ffplay-sdl2-android

./: README.md
app/: build.gradle
app/SDL/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
app/SDL/include-config-/SDL2/: SDL_config.h
app/SDL/include/SDL2/: SDL_revision.h
app/jni/: CMakeLists.txt
app/jni/src/: Android.mk  CMakeLists.txt  cmdutils.c  cmdutils.h  ffplay.c  ffplay.h  renderer.c  renderer.h
app/jni/src/ffmpeg/x86/include/: config.h
app/src/: Makefile
app/src/main/: AndroidManifest.xml
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java  Utils.java
